--- a/app/views/admin/imagems/new.html.erb
+++ b/app/views/admin/imagems/new.html.erb
@@ -1,8 +1,11 @@
 <h1>New imagem</h1>
 
-<% form_for(@imagem, :url => admin_imagems_path, :html => { :multipart => true }) do |f| %>
+<% form_for([@evento, @imagem], :url => admin_evento_imagems_path, :html => { :multipart => true }) do |f| %>
   <%= f.error_messages %>
-
+  <p>
+    <%= f.label :evento %><br />
+    <%= f.label @evento.titulo %>
+  </p>
   <p>
     <%= f.label :nome %><br />
     <%= f.text_field :nome %>
@@ -17,4 +20,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', admin_imagems_path %>
+<%= link_to 'Back', admin_evento_imagems_path %>
