ajustes nos links
Signed-off-by: mindu <jmindu@gmail.com>

--- a/app/views/admin/imagems/show.html.erb
+++ b/app/views/admin/imagems/show.html.erb
@@ -7,5 +7,5 @@
 	</tr>
 </table>
 </br>
-<%= link_to 'Edit', edit_admin_evento_imagem_path([@evento, @imagem]) %> |
+<%= link_to 'Edit', edit_admin_evento_imagem_path(@evento, @imagem) %> |
 <%= link_to 'Back', admin_evento_imagems_path %>
