--- a/app/views/admin/imagems/edit.html.erb
+++ b/app/views/admin/imagems/edit.html.erb
@@ -16,5 +16,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Show', @imagem %> |
-<%= link_to 'Back', imagems_path %>
+<%= link_to 'Show', [:admin, @evento, @imagem] %> |
+<%= link_to 'Back', admin_evento_imagems_path %>
