--- a/app/views/admin/imagems/index.html.erb
+++ b/app/views/admin/imagems/index.html.erb
@@ -11,7 +11,7 @@
   <tr>
 		<td><%= link_to image_tag(imagem.avatar.url(:thumb)), [:admin, @evento, imagem] %></td>
     <td><%=h imagem.nome %></td>
-    <td><%= link_to 'Edit', edit_admin_evento_imagem_path([@evento, imagem]) %></td>
+    <td><%= link_to 'Edit', edit_admin_evento_imagem_path(@evento, imagem) %></td>
     <td><%= link_to 'Destroy', [:admin, @evento, imagem], :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
