--- a/app/views/imagems/show.html.erb
+++ b/app/views/imagems/show.html.erb
@@ -7,4 +7,4 @@
 	</tr>
 </table>
 </br>
-<%= link_to 'Back', imagems_path(:page => session[:page]) %>
+<%= link_to 'Back', evento_path(@evento, :page => session[:page]) %>
