funcionalidade de star rating para as imagens
Signed-off-by: mindu <jmindu@gmail.com>

--- a/app/views/imagems/show.html.erb
+++ b/app/views/imagems/show.html.erb
@@ -5,6 +5,13 @@
 		<tr>
 			<td align="right"><%=h @imagem.nome %></td>
 	</tr>
+	<tr>
+			<td>
+				
+			<%= render :partial => "imagems/rating", :locals => { :imagem => @imagem } %>
+			 				
+				</td>
+		</tr>
 </table>
 </br>
 <%= link_to 'Back', evento_path(@evento, :page => session[:page]) %>
