--- a/app/views/admin/imagems/new.html.erb
+++ b/app/views/admin/imagems/new.html.erb
@@ -14,6 +14,10 @@
     <%= f.label 'Upload' %><br />
     <%= f.file_field :avatar %>
   </p>
+  <p>
+    <%= f.label 'Tags' %><br />
+    <%= text_field_tag 'tag_list' %>
+  </p>  
   
   <p>
     <%= f.submit "Create" %>
