--- a/app/views/eventos/show.html.erb
+++ b/app/views/eventos/show.html.erb
@@ -11,10 +11,9 @@
   </tr>  
   <tr>
     <td colspan="3">
-		<% for imagem in @imagems %>
-				<%= link_to image_tag(imagem.avatar.url(:thumb)), [@evento, imagem] %>
+		<% for imagem in @evento.imagems %>
+		<%= lightbox_image_tag(imagem.avatar.url(:thumb), imagem.avatar.url, {:class=>"images"}, :title => imagem.nome) %> 								
 		<% end %>
-		<%= will_paginate @imagems %>    	
     </td>  	
   </tr>  
 </table>
