--- a/app/views/layouts/eventos.html.erb
+++ b/app/views/layouts/eventos.html.erb
@@ -5,8 +5,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Eventos: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold' %>
-  <%= javascript_include_tag :defaults %>
+  <%= stylesheet_link_tag 'scaffold', 'lightbox' %>
+  <%= javascript_include_tag :defaults, 'lightbox' %>
 <style type="text/css" media="screen">
 
     .star-rating{
